# gnome-keep-awake

./: CONTRIBUTING.md  LICENSE  README.md  meson.build
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: meson.build  org.gnome.KeepAwake.gschema.xml
docs/plans/: 2026-03-20-gnome-keep-awake-design.md  2026-03-20-gnome-keep-awake-implementation.md
docs/superpowers/plans/: 2026-03-20-in-panel-settings-menu.md
docs/superpowers/specs/: 2026-03-20-in-panel-settings-menu-design.md
extension/: extension.js  meson.build  metadata.json
scripts/: enable-extension.sh
src/: daemon.js  meson.build  org.gnome.KeepAwake.Daemon.service.in
tests/: enable-extension-tests.sh
